<resources>
    <string name="app_name">MARS</string>

    <!-- Strings related to login -->
    <string name="prompt_email" >Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Retype Password</string>
    <string name="prompt_url">Image URL</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_process_img">Process Image</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email/username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password2">passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_URL">Please provide valid URL</string>
    <string name="error_registration_req">Please register before login</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="main_heading">    IBM Watson Visual Recognition</string>
    <string name="API_KEY">0e29dd99923d25a4e1f4314e28b0c6b20695f905</string>
    <string name="action_cancel">Cancel</string>
    <string name="prompt_email2">Email for password recovery</string>
    <!-- Strings for menubar -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
</resources>
