<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/lo2"
    tools:context="com.example.ved.MARS.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:titleTextColor="@color/colorListBack"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/mars1" />
    </android.support.v7.widget.Toolbar>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:progressTint="@color/colorMenuBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingLeft="100dp"
        android:paddingTop="200dp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="times new roman"
                android:paddingLeft="10dp"
                android:paddingTop="70dp"
                android:text="Keep Track of your                               Medicine with MARS!"
                android:textAlignment="center"
                android:textColor="#00688b"
                android:textColorHighlight="@color/colorPrimaryText"
                android:textSize="35dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"

                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/round_corner"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#00688b"
                    android:textColorLink="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/round_corner"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#00688b"
                    android:textColorLink="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="79dp">

                <Button
                    android:id="@+id/register"
                    style="?android:textAppearanceSmall"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="16dp"

                    android:background="@drawable/roundbutton"
                    android:fontFamily="times new roman"
                    android:onClick="register"
                    android:text="@string/action_register"
                    android:textAllCaps="false"
                    android:textColor="@color/colorListBack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/roundbutton"
                    android:fontFamily="times new roman"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/colorListBack"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
